# descriptor-cifrado

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  IDEA.md  LICENSE  README.md  deny.toml
.github/workflows/: ci.yml  docker.yml
.planning/: HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-crypto-core-http-api/: 01-01-workspace-skeleton-PLAN.md  01-01-workspace-skeleton-SUMMARY.md  01-02-github-actions-ci-PLAN.md  01-02-github-actions-ci-SUMMARY.md  01-03-core-validate-zeroize-PLAN.md  01-03-core-validate-zeroize-SUMMARY.md  01-04-core-armored-qr-encrypt-PLAN.md  01-04-core-armored-qr-encrypt-SUMMARY.md  01-05-server-axum-handlers-PLAN.md  01-05-server-axum-handlers-SUMMARY.md  01-06-integration-tests-PLAN.md  01-06-integration-tests-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-spa-frontend-history/: 02-01-frontend-scaffold-PLAN.md  02-01-frontend-scaffold-SUMMARY.md  02-02-backend-history-endpoints-PLAN.md  02-02-backend-history-endpoints-SUMMARY.md  02-03-shell-and-shared-components-PLAN.md  02-03-shell-and-shared-components-SUMMARY.md  02-04-tab-cifrar-PLAN.md  02-04-tab-cifrar-SUMMARY.md  02-05-tab-descifrar-PLAN.md  02-05-tab-descifrar-SUMMARY.md  02-06-tab-historial-and-rust-embed-PLAN.md  02-06-tab-historial-and-rust-embed-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-UI-SPEC.md  02-VERIFICATION.md
.planning/phases/03-docker-ghcr/: .continue-here.md  03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-HUMAN-UAT.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-startos-packaging-docs/: 01-DIGEST-PER-ARCH.txt  01-DIGEST-v0.1.1.txt  01-DIGEST.txt  01-PLAN.md  02-PLAN.md  03-PLAN.md  04-01-SUMMARY.md  04-02-SUMMARY.md  04-03-SUMMARY.md  04-04-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-PLAN.md  04-RESEARCH.md  05-PLAN.md  05-UAT.md
.planning/quick/260506-rx9-260506-rgb-fix-xpub-interop-con-liana/: 260506-rx9-PLAN.md  260506-rx9-SUMMARY.md
.planning/quick/260506-sr7-migrar-bitcoin-encrypted-backup-a-v0-0-2/: 260506-sr7-PLAN.md  260506-sr7-SUMMARY.md  260506-sr7-VERIFICATION.md
.planning/quick/260507-v6e-relax-multipath-validator-file-upload-ta/: 260507-v6e-PLAN.md  260507-v6e-SUMMARY.md
.planning/quick/260507-ww3-ux-nunchuk-detectar-single-chain-n-y-aut/: 260507-ww3-PLAN.md  260507-ww3-SUMMARY.md
.planning/quick/260508-0ao-polish-history-textos/: PLAN.md  SUMMARY.md
.planning/quick/260508-m7g-fix-refresh-historial-v015/: 260508-m7g-PLAN.md  260508-m7g-SUMMARY.md
.planning/quick/260508-mdu-v020-naming-obligatorio/: 260508-mdu-PLAN.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
crates/core/: Cargo.toml
crates/core/src/: armored.rs  decrypt.rs  encrypt.rs  error.rs  lib.rs  qr.rs  sparrow.rs  validate.rs  zeroize.rs
crates/core/tests/: armored.rs  liana_passthrough_integration.rs  round_trip.rs  round_trip_liana_blob.rs  sparrow_passthrough_integration.rs  validate.rs
crates/core/tests/fixtures/: desc.txt  sparrow-multisig.jsonl  wallet.bed  xpub.txt
crates/server/: Cargo.toml
crates/server/src/: assets.rs  error.rs  lib.rs  main.rs  state.rs
crates/server/src/routes/: decrypt.rs  encrypt.rs  history.rs  mod.rs
crates/server/tests/: embedded_spa.rs  history_no_leak.rs  history_round_trip.rs  no_leak.rs  round_trip.rs  validation.rs
crates/server/tests/fixtures/: desc.txt  wrong_xpub.txt  xpub.txt
frontend/: .npmrc  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.svelte  app.css  main.js
frontend/src/components/: AnimatedQrModal.svelte  CifrarOutputs.svelte  ConfirmDeleteModal.svelte  ConvertSingleChainModal.svelte  DescifrarOutputs.svelte  Header.svelte  HistoryBadge.svelte  HistoryEntryDetailModal.svelte  HistoryToggle.svelte  InlineError.svelte  Modal.svelte  Spinner.svelte  TabBar.svelte  TabCifrar.svelte  TabDescifrar.svelte  TabHistorial.svelte  ThemeToggle.svelte  ThreatModel.svelte  Toast.svelte
frontend/src/lib/: api.js  clipboard.js  descriptor.js  download.js  labelSanitize.js  relativeTime.js  tokens.css  xpub.js
frontend/src/stores/: app.svelte.js
