[workspace]
resolver = "2"
members = ["crates/core", "crates/server"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["semillabitcoin"]

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "warn"
print_stdout = "warn"
print_stderr = "warn"

[workspace.dependencies]
axum = { version = "0.8", default-features = false, features = ["json", "multipart", "tokio", "http1"] }
tokio = { version = "1.51", default-features = false, features = ["rt-multi-thread", "macros", "io-util", "net", "signal", "fs"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", default-features = false, features = ["trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
qrcode = { version = "0.14", default-features = false, features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
zeroize = { version = "1.8", features = ["derive"] }
rust-embed = { version = "8", features = ["axum"] }
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", default-features = false, features = ["formatting", "macros"] }
