[package]
name = "bed-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bed-core = { path = "../core" }
axum.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-util", "net", "signal", "fs"] }
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zeroize.workspace = true
base64.workspace = true
rust-embed.workspace = true
uuid.workspace = true
time.workspace = true

[dev-dependencies]
tower.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
tempfile = "3"
serial_test = "3"

[lints]
workspace = true
